[tool.poetry]
name = "medium-scraper"
version = "1.0.0"
description = "Medium Article Scraper"
authors = ["Nischay Thapa <nischaybikramthapa14@gmail.com>"]
readme = "README.md"
packages = [
    {include = "./medium_scraper"},
    {include = "./main.py"}
]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
pandas = "1.3.5"
beautifulsoup4 = "4.10.0"
lxml = "4.7.1"
requests = "2.28.1"
selenium = "4.6.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"